tests/ui/rfcs/rfc-2632-const-trait-impl/const-impl-trait.stderr
error[E0635]: unknown feature `const_cmp`
  --> $DIR/const-impl-trait.rs:6:5
   |
LL |     const_cmp,
   |     ^^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-impl-trait.rs:11:30
   |
LL | const fn cmp(a: &impl ~const PartialEq) -> bool {
   |                              ^^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-impl-trait.rs:15:30
   |
LL | const fn wrap(x: impl ~const PartialEq + ~const Destruct)
   |                              ^^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-impl-trait.rs:16:20
   |
LL |     -> impl ~const PartialEq + ~const Destruct
   |                    ^^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-impl-trait.rs:23:29
   |
LL |     fn huh() -> impl ~const PartialEq + ~const Destruct + Copy;
   |                             ^^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-impl-trait.rs:27:29
   |
LL |     fn huh() -> impl ~const PartialEq + ~const Destruct + Copy {
   |                             ^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0635`.
